fix(polls): Fix scroll not working on mobile web polls pane
* Moved TouchmoveHack's css to component

--- a/css/_polls.scss
+++ b/css/_polls.scss
@@ -240,7 +240,7 @@ ol.poll-result-list {
     position: relative;
 
     @media (max-width: 580px) {
-        height: calc(100% - 32px);
+        height: 100%;
     }
 }
 
